# rust_api_pdf_to_ocr_simplefile

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
