[package]
name = "rust_api_pdf_to_ocr_simplefile"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
mupdf = "0.5.0"
rusty-tesseract = "1.1.10"